Refactor implementation to use Ix.NET
The Buffer extension method is the equivalent of my previous
implementation.

--- a/src/DepthTracker/DepthTracker.csproj
+++ b/src/DepthTracker/DepthTracker.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Interactive" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
